gcc/testsuite/g++.dg/cpp0x/lambda/lambda-err1.C
// PR c++/51415
// { dg-do compile { target c++11 } }

void foo()
{
  int x[1];
  [x]{} = 0;			// { dg-error "lambda" }
}
